# ModelicaRes

./: pyproject.toml  setup.cfg  setup.py
modelicares/: __init__.py  linres.py  simres.py  util.py
