[metadata]
name = modelicares
version = attr: modelicares.__version__
author = Kevin Davies
author_email = kdavies4@gmail.com
description = Set up, plot, and analyze Modelica simulations in Python
long_description = file: README.md
python_requires = >=3.7
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Visualization
	Topic :: Utilities
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	License :: None
	Operating System :: OS Independent


[options]
packages = find:
include_package_data = True
install_requires = 
	numpy
	scipy
	pandas
	control
	six
requires = 
	numpy
	scipy
	matplotlib
	pandas
	control
	six








